--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "homepage": "https://elonashatri.github.io/mali-pashtrik",
   "version": "1.0.0",
   "type": "module",
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+},
   "dependencies": {
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
